[package]
name = "tinytest"
description = "Write more compact unit tests with a small macro."
authors = ["Guillem Jara <4lon3ly0@tutanota.com>"]
license = "MIT"
repository = "https://github.com/Alonely0/tinytest/"
version = "0.1.0"
edition = "2021"
categories = ["no-std", "rust-patterns"]
keywords = ["no_std", "test", "unit", "unit_test", "unit_tests"]

[dependencies]
